qed_fermion/pbs_files/nividia-smi/local_J_0.5_Nstep_10000_hmc_1953552.err
  File "<string>", line 1
    import
          ^
SyntaxError: invalid syntax
/share1/lmod/lmod/init/bash: line 82: print(torch.cuda.is_available()): command not found
